--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,9 @@
 .theme-bg {
       @apply bg-[rgb(31,71,69)] bg-[linear-gradient(27deg,_rgba(31,71,69,1)_10%,_rgba(16,36,27,1)_67%,_rgba(68,73,53,1)_100%)];
 }
+body::-webkit-scrollbar {
+      display: none;
+}
 .text-format {
       @apply tracking-tight leading-none;
 }
