--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,20 @@
 .theme-bg {
       @apply bg-[rgb(31,71,69)] bg-[linear-gradient(27deg,_rgba(31,71,69,1)_10%,_rgba(16,36,27,1)_67%,_rgba(68,73,53,1)_100%)];
 }
+@font-face {
+      src: url("/fonts/astralaga.woff2");
+      font-family: Astralga;
+}
+@font-face {
+      src: url("/fonts/primary.woff2");
+      font-family: Primary;
+}
+.font-astralga {
+      font-family: Astralga;
+}
+.font-primary {
+      font-family: Primary;
+}
 body::-webkit-scrollbar {
       display: none;
 }
