--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-.theme-bg {
-      @apply bg-[rgb(31,71,69)] bg-[linear-gradient(27deg,_rgba(31,71,69,1)_10%,_rgba(16,36,27,1)_67%,_rgba(68,73,53,1)_100%)];
+
+:root {
+      --bg-gradient: linear-gradient(#1a1a1a, rgb(26, 26, 26));
 }
 @font-face {
       src: url("/fonts/astralaga.woff2");
